hphp/hack/test/typecheck/reactive/rx_returns_mutable.php.like_types.exp
File "rx_returns_mutable.php", line 14, characters 30-34:
Invalid argument (Typing[4110])
File "rx_returns_mutable.php", line 9, characters 14-16:
Expected int
File "rx_returns_mutable.php", line 13, characters 19-21:
But got dynamic because it is an unenforceable type
